--- a/css/signup-ar.css
+++ b/css/signup-ar.css
@@ -554,6 +554,7 @@ label {
   display: flex;
   justify-content: center;
   gap: 0.25rem;
+  flex-wrap: wrap;
 }
 
 .green__link {
@@ -594,12 +595,12 @@ label {
   gap: 0.5rem;
   align-self: center;
   justify-content: center;
-  font-size: 0.875rem;
+  font-size: 1rem;
 }
 
 .signup__link {
   color: var(--clr--primary);
-  font-size: 0.875rem;
+  font-size: 1rem;
   cursor: pointer;
 }
 
